--- a/src/static/css/auth.css
+++ b/src/static/css/auth.css
@@ -22,6 +22,10 @@ body {
 
 .form-signin input[type="email"] {
   margin-bottom: -1px;
+  border-radius: 0;
+}
+.form-signin input[type="text"] {
+  margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
 }
