--- a/src/templates/auth/register.html
+++ b/src/templates/auth/register.html
@@ -1,35 +1,25 @@
-{% extends "base.html" %} {% block title %}Diary Book - Login{% endblock %}
+{% extends "base.html" %} {% block title %}Diary Book - Register{% endblock %}
 {%load static%} {% block head %}
 <link rel="stylesheet" href="{% static 'css/auth.css' %}" />
 
 {% endblock %} {% block content %}
 
 <main class="form-signin w-100 m-auto">
-  <form>
-    <h2 class="h3 mb-3 fw-normal">Please sign in</h2>
-    <div class="form-floating">
-      <input
-        type="email"
-        class="form-control"
-        id="floatingInput"
-        placeholder="name@example.com"
-      />
-      <label for="floatingInput">Email address</label>
-    </div>
-    <div class="form-floating">
-      <input
-        type="password"
-        class="form-control"
-        id="floatingPassword"
-        placeholder="Password"
-      />
-      <label for="floatingPassword">Password</label>
-    </div>
-
-    <div class="checkbox mb-3">
-      <label> <input type="checkbox" value="remember-me" /> Remember me </label>
-    </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+  <form method="POST">
+    {% csrf_token %}
+    <h2 class="h3 mb-3 fw-normal">Register To Our App</h2>
+    {% if request.GET.okay %}
+      <div class="alert alert-success"> You have registered successfully.</div>
+    {% endif %}
+    {% for field in form %}
+      {% if field.errors %}
+        <div class="alert alert-danger">{{ field.errors }}</div>
+      {% endif %}
+    {% endfor %} 
+    {% for field in form %} 
+      {{ field }} 
+    {% endfor %}
+    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
   </form>
 </main>
