--- a/src/static/css/auth.css
+++ b/src/static/css/auth.css
@@ -35,3 +35,8 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
