Fix login section problems

--- a/src/templates/auth/login.html
+++ b/src/templates/auth/login.html
@@ -8,6 +8,9 @@
   <form method="POST">
     {% csrf_token %}
     <h2 class="h3 mb-3 fw-normal">Please sign in</h2>
+    {% if request.GET.okay %}
+      <div class="alert alert-success"> You have registered successfully.<strong>You can logging in now!</strong></div>
+    {% endif %}
     {% for field in form %}
      {% if field.errors %}
       <div class="alert alert-danger">{{  field.errors }}</div>
@@ -19,7 +22,8 @@
     <div class="checkbox mb-3">
       <label> <input type="checkbox" value="remember-me" /> Remember me </label>
     </div>
-    <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+    <button class="w-100 btn btn-lg btn-primary mb-2" type="submit">Sign in</button>
+    <a href="{% url 'register' %}">Dont have account? register now!</a>
     <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
   </form>
 </main>
