--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -11,6 +11,7 @@
   </head>
   <body>
     {% block content %}{% endblock %}
+    <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     {% block footer %}{% endblock %}
   </body>
