--- a/src/templates/dashboard/base.html
+++ b/src/templates/dashboard/base.html
@@ -27,13 +27,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'dashboard' %}">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'dashboard_add' %}">New</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled">List</a>
+            <a class="nav-link" href="{% url 'dashboard_list' %}">List</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'logout' %}">logout</a>
