--- a/src/templates/dashboard/index.html
+++ b/src/templates/dashboard/index.html
@@ -1,4 +1,32 @@
 {% extends "dashboard/base.html" %}
 {% block container %}
 <h2>Dashboard</h2>
+<a href="{% url 'dashboard_add' %}" class="btn btn-primary my-4" style="width:100%;padding-block: 4rem;">
+    <strong>Do Not Forget!</strong>
+    To add your day.
+</a>
+
+
+<div class="row gy-3">
+    {% for datum in data %}
+    <div class="col-12 col-md-6 col-lg-3">
+<div class="card text-center">
+    <div class="card-header">
+        {{ datum.title }}
+    </div>
+    <div class="card-body">
+<p class="card-text">
+    {% with content=datum.content|striptags %}
+        {{content|slice:"155"}}[...]
+    {% endwith %}
+</p>
+      <a href="{% url 'dashboard_view' id=datum.id %}" class="btn btn-dark">View in Detail</a>
+    </div>
+    <div class="card-footer text-muted">
+        {{ datum.created_date }}
+    </div>
+  </div>
+    </div>
+    {% endfor %}
+</div>
 {% endblock %}
